Refactored branch handling in Reports and DataCommunicationDB for Chain and Branch Managers
- Updated `ReportsScreenController` to correctly initialize and handle branch selection ComboBox based on employee type.
  - Chain Managers are presented with a list of all branches.
  - Branch Managers are tied to their assigned branch and the ComboBox is hidden (as they cannot select different branches).
  - Improved null checks for both employee and branch attributes to avoid NPEs.

- Updated `DataCommunicationDB` logic for saving reports:
  - Introduced a fallback mechanism where if the report's branch is `null` (e.g., for Chain Managers), a placeholder branch with ID `-1` is assigned. This ensures the report is saved without causing a database constraint violation.
  - Added try-catch block with transaction rollback for better error handling during report persistence.

- Modified `executePurchaseQueryForSpecificType` to filter purchases by branch only for Branch Managers:
  - For Branch Managers, the `branch_id` filter is applied using the branch ID.
  - For Chain Managers, branch filtering is skipped entirely, allowing access to purchases from all branches.
  - Added comprehensive logging to track whether branch filtering is applied based on employee type and branch assignment.

**Note on Fragility:**
This solution, while solving the current issue, is potentially fragile for a few reasons:
1. The reliance on a placeholder branch with an ID of `-1` may lead to unexpected behavior in future queries or logic, particularly if this placeholder branch is mistakenly treated as a real entity.
2. The differentiation between Chain and Branch Managers is tightly coupled with the employee type. Any future changes to employee roles or permissions may require revisiting and adjusting this logic.
3. The manual management of branch visibility in the UI and logic introduces the possibility of hidden bugs, especially if new user roles are introduced that require similar filtering logic.
